Updated dark mode font color to light gray to prevent vibration

--- a/styles.css
+++ b/styles.css
@@ -259,13 +259,13 @@ li {
   margin: 30px auto;
   max-width: 700px;
   min-width: 200px;
-  background: rgba(8, 8, 8, 0.5);
+  background: rgba(8, 8, 8, 0.7);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  color: #e6e6e6;
+  color: #bdbcbc;
 }
 .dark .card {
   margin: 50px auto;
